style: fix mobile/tablet canvas blurring by locking canvas background wrapper height to 100vh

--- a/src/index.css
+++ b/src/index.css
@@ -2581,7 +2581,7 @@ svg {
 
   .hero-canvas-bg-wrapper {
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
   }
 
